# CleanImage

./: CMakeLists.txt  ReadMe.md  ReadmeRu.md
include/: exif_operations.h  image_processing.h  zip_operations.h
src/: exif_operations.cpp  image_processing.cpp  main.cpp  zip_operations.cpp
